# connectome-analysis

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: draft_release.yml  release.yml  test.yml  wheels.yml
docs/: index.md
src/connalysis/network/: classic.py  local.py  stats.py  topology.py
src/connalysis/randomization/: randomization.py
src/generate_model/: CMakeLists.txt
src/generate_model/generateModel/: generate_model.cpp
tests/: test_network_topology.py
