[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "py_connectome_analysis"
version = "1.0.6"
description = "Methods for network analysis of graphs coming from brain models and activity on them"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.9,<3.13"
authors = [
    {name = "Daniela Egas Santander", email = "daniela.egas.math@gmail.com"},
    {name = "Christoph Pokorny", email = "christoph.pokorny@openbraininstitute.org"},
    {name = "Jason Smith", email = "jason.smith@ntu.ac.uk"},
    {name = "Michael Wolfgang Reimann", email = "mwr@reimann.science"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "tables>3.8",
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "progressbar==2.5",
    "tqdm",
    "pyflagser",
    "pyflagsercount>=0.2.41",
    "networkx",
    "scikit-network",
    "ipykernel>=6.29.5,<7",
]

[project.urls]
Documentation = "https://openbraininstitute.github.io/connectome-analysis/"
Homepage = "https://openbraininstitute.github.io/connectome-analysis/"
Repository = "https://github.com/openbraininstitute/connectome-analysis.git"

[tool.scikit-build]
cmake.source-dir = "src/generate_model"
wheel.packages = ["src/connalysis"]

[project.optional-dependencies]
dev = [
    "black",
    "mkdocstrings[python]>=0.18",
    "mkdocs-material",
    "pytest",
    "pytest-github-actions-annotate-failures",
    "pytest-cov",
    "jupyter",
    "seaborn",
]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
target-version = ["py37", "py38", "py39"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = """\
    --cov connalysis \
    --cov-report term-missing \
    --no-cov-on-fail \
"""

[tool.coverage.report]
fail_under = 10
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]
